<resources>
    <string name="app_name">ShowFCM</string>
    <string name="deviceToken">your device token</string>
    <string name="device_token">Device Token</string>
    <string name="send_notification">Send Notification</string>
    <string name="specific_device">Specific Device</string>
    <string name="all_users">All Users</string>
    <string name="topic">Topic</string>
    <string name="extra_fields_key_value_key_value">Extra Fields (key:value,key:value)</string>
    <string name="image_url">Image URL</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
</resources>