<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message" />

    <EditText
        android:id="@+id/etImageUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/image_url" />

    <EditText
        android:id="@+id/etExtraFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:hint="@string/extra_fields_key_value_key_value" />

    <RadioGroup
        android:id="@+id/rgNotificationType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic" />

        <RadioButton
            android:id="@+id/rbAllUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_users" />

        <RadioButton
            android:id="@+id/rbSpecificDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/specific_device" />
    </RadioGroup>

    <EditText
        android:id="@+id/etDeviceToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_token"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnSendNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonThemes"
        android:text="@string/send_notification" />
</LinearLayout>
